--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["gestion"],
+  "keywords": [
+    "gestion"
+  ],
   "author": "404 Not Found",
   "license": "ISC",
   "dependencies": {
@@ -19,6 +21,7 @@
     "express": "^4.19.2",
     "express-rate-limit": "^7.5.0",
     "express-validator": "^7.2.1",
+    "gestion-hotelera-backend": "file:",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.0",
